# whidby

./: .docguard.json  .dockerignore  .env.example  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  DRIFT-LOG.md  Dockerfile.api  credentials-beta-users.md  docker-compose.yml  next.config.ts  package-lock 2.json  package-lock.json  package.json  pyproject.toml  render.yaml
.Codex/: ACTIVE_WORK.md  project_context.md
.Codex/environments/: environment.toml
.codex/: ACTIVE_WORK.md  config.toml  project_context.md
.cursor/: .mcp.json  agents.md  mcp.json
.cursor/commands/: speckit.implement.md
.cursor/rules/: specify-rules.mdc  visual-qa.mdc
.githooks/: pre-push
.github/scripts/: check-constitution.sh  check-docs-sync.sh  check-spec-artifacts.sh  check-spec-drift.sh  (+1 more)
.playwright-mcp/: page-2026-04-01T03-33-15-116Z.yml  page-2026-04-01T03-37-32-889Z.yml  page-2026-04-01T04-23-47-373Z.yml  page-2026-04-01T04-24-02-700Z.yml  page-2026-04-01T04-27-46-637Z.yml  page-2026-04-01T23-49-31-550Z.yml
commands/: docguard.guard.md
docs/: adr-tanstack-router.md  algo_spec_v1_1.md  algo_spec_v2.md  data_flow.md  deep_agent_deployment_audit.md  experiment_playbook.md  first-report-execution-system-review.md  module_dependency.md  module_spec_map.md  outreach_experiment.md  product_breakdown.md  proto-convergence-issues.md  research_agent_design.md  scoring-coverage-analysis.md  spec_workflow_guide.md  system-architecture-diagram.md  system_design.md  tanstack-migration-audit.md  widby-synthesis-reflow-agent-runbook.md
docs-canonical/: ARCHITECTURE.md  DATA-MODEL.md  ENVIRONMENT.md  REQUIREMENTS.md  TEST-SPEC.md
scripts/: backfill_kb_entities.py  check_domain_imports.py  fetch_census_sample.py  pre-push-check.sh
tests/: conftest.py
(+925 files in other folders)
