[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "widby-engine"
version = "0.1.0"
description = "Niche scoring and outreach engine for Widby"
requires-python = ">=3.11"
dependencies = [
    "anthropic",
    "httpx",
    "supabase",
    "pydantic>=2",
    "networkx",
    "fastapi",
    "uvicorn[standard]",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
    "pytest-cov",
    "ruff",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: requires real API calls (deselect with '-m \"not integration\"')",
]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.hatch.build.targets.wheel]
packages = ["src"]
